--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Hello World</title>
-<style>
-body {
-  background: #1a1a1a;
-  color: #e0e0e0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  font-family: sans-serif;
-}
-</style>
-</head>
-<body>
-<h1>Hello World</h1>
-</body>
+	<head>
+	    <meta charset="UTF-8">
+	    <title>Hello World</title>
+	    <style>
+			body {
+			  background: #1a1a1a;
+			  color: #e0e0e0;
+			  display: flex;
+			  justify-content: center;
+			  align-items: center;
+			  height: 100vh;
+			  margin: 0;
+			  font-family: sans-serif;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>Hello mimeo.lol!</h1>
+	</body>
 </html>
