Update title and heading text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	    <meta charset="UTF-8">
-	    <title>Hello World</title>
+	    <title>mimeo.lol</title>
 	    <style>
 			body {
 			  background: #1a1a1a;
@@ -17,6 +17,6 @@
 		</style>
 	</head>
 	<body>
-		<h1>mimeo.lol</h1>
+		<h1>m i m e o . l o l</h1>
 	</body>
 </html>
